--- a/src/styles/Mixins.sass
+++ b/src/styles/Mixins.sass
@@ -2,17 +2,20 @@
     &.fade-enter 
         opacity: 0;
 
-
     &.fade-enter-active 
         opacity: 1;
-        transition: all 300ms ease-in-out;
+        transition: all 400ms ease-in-out;
 
     &.fade-leave 
         opacity: 1;
 
     &.fade-leave-active 
-        opacity: 0;
-        transition: all 300ms ease-in-out;
+        opacity: 0
+        max-height: 0
+        padding-bottom: 0
+        padding-top: 0
+        transition: opacity 400ms ease-in-out, max-height 400ms ease-in-out 400ms, margin 400ms ease-in-out 400ms, padding 400ms ease-in-out 400ms;
+
 
 
 @mixin slide-top-transition($inDuration, $outDuration) 
@@ -58,7 +61,12 @@
         opacity: 0
         position: relative
         left: 100%
-        transition: opacity 300ms ease-in-out, left 300ms ease-in-out 100ms;
+        max-height: 0
+        padding-bottom: 0
+        padding-top: 0
+        // transition: opacity 300ms ease-in-out, left 300ms ease-in-out 100ms;
+        transition: opacity 400ms ease-in-out, left 300ms ease-in-out 100ms, max-height 400ms ease-in-out 400ms, margin 400ms ease-in-out 400ms, padding 400ms ease-in-out 400ms;
+
 
 @mixin slide-bottom-transition($inDuration, $outDuration) 
     &.slide-bottom-enter
@@ -73,7 +81,7 @@
 
     &.slide-bottom-leave 
         opacity: 0
-        margin-bottom: 0        
+        margin-bottom: 0   
 
     &.slide-bottom-leave-active
         opacity: 1
